-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1003 2011-05-03 17:39:48 guru Exp $
-----------------------------------------------------------------------------------------

2011-05-03	pwessel
	* grdhisteq_func.c:	Now treats input grids as read-only.
	* greenspline_func.c:	Now treats input grids as read-only.
	* grdfft_func.c:	Now treats input grids as read-only.
	* grdvolume_func.c:	Now treats input grids as read-only.
	* grdvector_func.c:	Now treats input grids as read-only.
	
2011-05-03	jluis
	* trend1d_func.c:	Added -F...|p as an option to output only the model coefficients 

2011-05-02	pwessel
	* gmt_init.c:		FORMAT_FLOAT_OUT can now be used to set column-specific
				formats using comma-separated <cols>:<format> specifications.
				The last format without leading <cols>: overrides the default
				format for all unspecified columns.
				The -h[i|o][<n>] option now works for binary files where <n>
				is interpreted to be the number of bytes to skip/pad.
	* gmtmath_func.c:	Added NORM which scales A so max-min == 1.
	* grdmath_func.c:	Added NORM which scales A so max-min == 1.

2011-05-02	remko
	* gmt_init.c:		Fixed problems with custom page size.
	* pslib.c:		Removed incorrect increase count of clipping when placing
				curved labels.

2011-05-01	pwessel
	* job03.sh:		Replaced complicated awk scripting with gmtmath to ensure
				we get the common sampling range which changed by a tad
				due to the bug in project.
	* gmt_init.c:		New -b syntax to allow for mixed-type records on i/o.
	* gmt_io.c:		New binary i/o processing to allow separate types for each column.

2011-05-01	remko
	* test/grdview/icelandbox.sh:	New test case based on query by Peter Schmidt.
	* scripts/*.sh:		Replaced ". functions.sh" by ". ./functions.sh" to avoid problems
				with people who do not have . in their PATH. E.g., Ubuntu.
	* gmt_io.h:		Removed define GMT_native_binary